[package]
name = "cirque"
version = "0.1.0"
authors = ["Benjamin Bergman <benjamin.bergman@humanrights.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
bitfield = "0.13.2"

[dev-dependencies]
stm32f1xx-hal = { version = "0.5.2", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.12", features = ["device"] }
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
